# mt-kahypar-rs

./: .gitmodules  Cargo.toml  build.rs
src/: lib.rs  raw.rs
tests/: partition_hypergraph_raw.rs  partition_hypergraph_rs.rs  partition_hypergraph_sys.rs
